added a function looking for a post form to add a course

--- a/dash/grades/templates/grades/index.html
+++ b/dash/grades/templates/grades/index.html
@@ -10,7 +10,7 @@
         {% endfor %}
         </ul>
     {% else %}
-        <p class="text-center h4">No classes have been created.</p>
+        <p>No classes have been created.</p>
     {% endif %}
     </body>
 
