home page is login page, logout redirects to login.

--- a/todo/templates/home.html
+++ b/todo/templates/home.html
@@ -2,17 +2,18 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Home</title>
 </head>
 <body>
 
     <div class="container pt-5">
-        <h1>Please log in to see your Personal Dashboard</h1>
+
 
         {% if user.is_authenticated %}
 
         <h2>
-            <a href="/admin/">    Go To Dashboard</a>
+            <h1>Click the link to view your dashboard</h1>
+            <a href="/todo/">    Go To Dashboard</a>
 
         </h2>
         <hr>
@@ -20,6 +21,7 @@
         <a href="{% url 'logout' %}">Logout</a>
 
         {% else %}
+        <h1>Please log in to see your Personal Dashboard</h1>
         <a href="{% url 'social:begin' 'google-oauth2' %}">
                 Login
                 </a>
