--- a/grades/templates/grades/index.html
+++ b/grades/templates/grades/index.html
@@ -13,11 +13,12 @@
             <!-- <p><a href="assignmentlist">{{ course.course_name }}</a></p> -->
             <p><a href="{% url 'grades:toIndCourse' course.id %}">{{ course.course_name }}</a></p>
         {% endfor %}
-            <a href="/grades/courses"> Add a course here </a>
+            <a href="/grades/courses" class = "btn btn-primary"> Add a course </a>
         </ul>
     {% else %}
         <p>No classes have been created.</p>
-        <a href="/grades/courses"> Add a course here </a>
+        <a href="/grades/courses" class = "btn btn-primary"> Add a course </a>
+        
     {% endif %}
     </div>
     </body>
