--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -15,8 +15,9 @@
 		<link rel="stylesheet" href="{% static 'todo/styles.css' %}" />
 	</head>
 	<body>
-		<div class="container-fluid" id="wrapper">
 
+		<div class="container-fluid" id="wrapper">
+			{% if user.is_authenticated %}
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-4" id="content">
 					<h2>What are your to-dos?</h2>
@@ -61,6 +62,12 @@
 						{% endfor %}
 					</ul>
 				</div>
+				{% else %}
+        		<h1>Please log in to see your Personal Dashboard</h1>
+        		<a href="{% url 'social:begin' 'google-oauth2' %}">
+                Login
+                </a>
+				{%endif%}
 			</div>
 
 			<footer>
