--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -16,7 +16,7 @@
 	<body>
 
 		<div class="container-fluid" id="wrapper">
-
+			{% if user.is_authenticated %}
 			<div class="row">
 				<div class="col-lg-4 col-lg-offset-4" id="content">
 					<h2>What are your to-dos?</h2>
@@ -62,6 +62,12 @@
 					</ul>
 				</div>
 			</div>
+				{% else %}
+        		<h1>Please log in to see your Personal Dashboard</h1>
+        		<a href="{% url 'social:begin' 'google-oauth2' %}">
+                Login
+                </a>
+				{%endif%}
 
 			<footer>
 				<div class="row pad">
