--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -16,7 +16,7 @@
 		<link rel="stylesheet" href="{% static 'todo/styles.css' %}" />
 	</head>
 	<body>
-
+		<div class = "container">
 		<div class="container-fluid" id="wrapper">
 			{% if user.is_authenticated %}
 			<div class="row">
@@ -77,6 +77,7 @@
 						Copyright &copy; 2020 <strong>asdfghjkl - DASH</strong>
 					</div>
 				</div>
+			</div>
 			</footer>
 		</div>
 	</body>
