--- a/todo/templates/todo/index.html
+++ b/todo/templates/todo/index.html
@@ -15,61 +15,59 @@
 	</head>
 	<body>
 
-		<div class="container-fluid" id="wrapper">
-
-			<div class="row">
-				<div class="col-lg-4 col-lg-offset-4" id="content">
-					<h2>What are your to-dos?</h2>
-
-					<form action="{% url 'add' %}" method="POST" role="form">
-						{% csrf_token %}
-						<div class="form-group">
-							<div class="input-group">
-							  {{ form.text }}
-								{{form.date}}
-							  <span class="input-group-btn">
-								  <button type="submit" class="btn btn-default" id="add-btn">ADD</button>
-							  </span>
-							</div>
-						</div>
-					</form>
-
-					<div class="row t10">
-						<div class="col-lg-12">
-							<div class="btn-toolbar">
-								<div class="btn-group">
-									<a href="{% url 'deletecomplete' %}"><button type="button" class="btn btn-warning">
-										<i class="glyphicon glyphicon-trash"></i> DELETE COMPLETED
-									</button></a>
-								</div>
-								<div class="btn-group">
-									<a href="{% url 'deleteall' %}"><button type="button" class="btn btn-warning">
-										<i class="glyphicon glyphicon-trash"></i> DELETE ALL
-									</button></a>
-								</div>
-							</div>
-						</div>
-					</div>
-
-					<ul class="list-group t20">
-						{% for todo in todo_list %}
-							{% if todo.complete %}
-							<li class="list-group-item todo-completed">{{todo.due_date}} -- {{ todo.text }}</li>
-							{% else %}
-							<a href="{% url 'complete' todo.id %}"><li class="list-group-item">{{todo.due_date}} -- {{ todo.text }}</li></a>
-							{% endif %}
-						{% endfor %}
-					</ul>
+	<div class="container">
+	  <div class="row">
+		<div class="col-xs-6 row-height border">
+			<h2>What are your to-dos?</h2>
+			<form action="{% url 'add' %}" method="POST" role="form">
+			{% csrf_token %}
+			<div class="form-group">
+				<div class="input-group">
+				  {{ form.text }}
+					{{form.date}}
+				  <span class="input-group-btn">
+					  <button type="submit" class="btn btn-default" id="add-btn">ADD</button>
+				  </span>
 				</div>
 			</div>
-
-			<footer>
-				<div class="row pad">
-					<div class="col-lg-12 text-center">
-						Copyright &copy; 2020 <strong>asdfghjkl - DASH</strong>
-					</div>
+		</form>
+			<div class="btn-toolbar">
+				<div class="btn-group">
+					<a href="{% url 'deletecomplete' %}"><button type="button" class="btn btn-warning">
+						<i class="glyphicon glyphicon-trash"></i> DELETE COMPLETED
+					</button></a>
 				</div>
-			</footer>
+				<div class="btn-group">
+					<a href="{% url 'deleteall' %}"><button type="button" class="btn btn-warning">
+						<i class="glyphicon glyphicon-trash"></i> DELETE ALL
+					</button></a>
+				</div>
+			</div>
+			<ul class="list-group t20">
+			{% for todo in todo_list %}
+				{% if todo.complete %}
+				<a href="{% url 'deselect' todo.id %}"><li class="list-group-item todo-completed">{{todo.due_date}} -- {{ todo.text }}</li></a>
+				{% else %}
+				<a href="{% url 'complete' todo.id %}"><li class="list-group-item">{{todo.due_date}} -- {{ todo.text }}</li></a>
+				{% endif %}
+			{% endfor %}
+		</ul>
 		</div>
+<!--		<div class="col-xs-6">-->
+<!--			col2-->
+<!--		</div>-->
+<!--		<div class="w-100"></div>-->
+<!--		<div class="col">col</div>-->
+<!--		<div class="col">col</div>-->
+	  </div>
+	</div>
 	</body>
+
+	<footer>
+					<div class="row pad">
+						<div class="col-lg-12 text-center">
+							Copyright &copy; 2020 <strong>asdfghjkl - DASH</strong>
+						</div>
+					</div>
+	</footer>
 </html>
