--- a/grades/templates/grades/index.html
+++ b/grades/templates/grades/index.html
@@ -7,20 +7,45 @@
     <body>
     <div class = "container">
         {% if user.is_authenticated %}
-
-        <h4 class = "display-4" style = "text-align: left;">Here are your courses:</h4>
+        <h4 class = "display-4" style = "text-align: center; font-size: 45px;">Welcome {{ user }}</h4>
+        <h4 class = "display-4" style = "text-align: left; font-size:30px; ">Here are your courses:</h4>
         {% if course_list %}
             <ul>
             {% for course in course_list %}
-                <!-- <p><a href="assignmentlist">{{ course.course_name }}</a></p> -->
-                <p><a href="{% url 'grades:toIndCourse' course.id %}">{{ course.course_name }}</a></p>
+                {% if course.improved is True %}
+                <div style = "display: inline-block" >
+                    <p style = "float: left;"><a href="{% url 'grades:toIndCourse' course.id %}">{{ course.course_name }}</a></p> <p style = "float: left;color: #39D043; padding-left: 20em; padding-right: 20em;"> <strong>{{ course.course_grade }}</strong></p>
+                    <a href="{% url 'grades:RemoveCourse' course_id=course.id %}">Remove
+                        course</a>
+                </div>
+                {% endif %}
+                {% if course.improved is False %}
+                <div style = "display: inline-block">
+                <p style = "float: left;"><a href="{% url 'grades:toIndCourse' course.id %}">{{ course.course_name }}</a></p> <p style = "float: left;color: red; padding-left: 20em; padding-right: 20em;"> <strong>{{ course.course_grade }}</strong></p>
+                <a href="{% url 'grades:RemoveCourse' course_id=course.id %}">Remove
+                    course</a>
+                </div>
+                {% endif %}
             {% endfor %}
-                <a href="/grades/courses" class = "btn btn-primary"> Add a course </a>
+            <form action="{% url 'grades:NewCourse' %}" method="post">
+                {% csrf_token %}
+                <label for="name_input" style = "font-size:x-large;">Create a New Course</label>
+                <input class = "form-control" type="text" name="course_name" id="name_input" placeholder="Course name" style = "width: 150px;">
+            <br>
+            <input type="submit" value="Submit">
+            </form>
             </ul>
         {% else %}
-            <p>No classes have been created.</p>
-            <a href="/grades/courses" class = "btn btn-primary"> Add a course </a>
-
+        <ul>
+            <p>You have no courses.</p>
+            <form action="{% url 'grades:NewCourse' %}" method="post">
+                {% csrf_token %}
+                <label for="name_input" style = "font-size:x-large;">Create a New Course</label>
+                <input class = "form-control" type="text" name="course_name" id="name_input" placeholder="Course name" style = "width: 150px;">
+            <br>
+            <input type="submit" value="Submit">
+            </form>
+        </ul>
         {% endif %}
     {% else %}
         <h1>Please log in to see your Personal Dashboard</h1>
