--- a/grades/templates/grades/indCourse.html
+++ b/grades/templates/grades/indCourse.html
@@ -17,31 +17,27 @@
     </div>
     {% endif %}
     {% if indCourse %}
+    {% for assType in indCourse.asstype_set.all %}
+    <p>Assignment Type: {{ assType.ass_type }} Worth: {{ assType.grade_percentage }}%</p>  
     <div class="container">
         <div class="row">
-            <div class="col-sm" style = "width: 100;">
-            Assignment name <br>
+
+
+          <div class="col-sm" style = "width: 100;">
+            Assignment Name<br>
             <ul>
-                {% for assignment in indCourse.assignment_set.all %}
-                <p>{{ assignment.ass_name }}</p>
-                    {% endfor %}
-                    <!-- <a href="/grades/assignments"> Add an assignment here </a> -->
+                {% for assignment in assType.assignment_set.all %}
+                <p>{{ assignment.ass_name }} </p>
+                {% endfor %}
+                    
             </ul>
           </div>
+
           <div class="col-sm" style = "width: 100;">
             Assignment Grade<br>
             <ul>
-                {% for assignment in indCourse.assignment_set.all %}
-                <p>{{ assignment.grade }}% </p>
-                    {% endfor %}
-                    <!-- <a href="/grades/assignments"> Add an assignment here </a> -->
-            </ul>
-          </div>
-          <div class="col-sm" style = "width: 100;">
-            Percent of Total Grade<br>
-            <ul>
-                {% for assignment in indCourse.assignment_set.all %}
-                <p> {{ assignment.grade_percentage }}%
+                {% for assignment in assType.assignment_set.all %}
+                <p> {{ assignment.grade }}%
                     <a href="{% url 'grades:RemoveAssignment' course_id=indCourse.id assignment_id=assignment.id%}">Remove
                             assignment</a></p>
                     {% endfor %}
@@ -50,20 +46,37 @@
           </div>
         </div>
       </div>
-    
+      <h4>Enter New Assignment</h4>
+      
+      <form action="{% url 'grades:NewAssignment' indCourse.id%}" method="post">
+          {% csrf_token %}
+          <label for="name_input" style="font-size:larger;">Enter the assignment name</label>
+          <input class="form-control" type="text" name="course_name" id="name_input" style = "width: 160px;" placeholder = "Assignment name">
+  
+          <label for="grade_input" style="font-size: larger;">Enter the grade you got on the assignment</label>
+          <input class="form-control" type="number" name="grade_input" id="grade_input" style = "width: 75px;">
+  
+          <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
+              (in percent)</label>
+          <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" style = "width: 75px;"> -->
+          <br>
+          <input type="submit" value="Submit">
+      </form>
+      {% endfor %}
     {% endif %}
-    <h4>Enter New Assignment</h4>
-    <form action="{% url 'grades:NewAssignment' indCourse.id%}" method="post">
+    <h4>Enter New Assignment Type</h4>
+      
+    <form action="{% url 'grades:NewType' indCourse.id%}" method="post">
         {% csrf_token %}
-        <label for="name_input" style="font-size:larger;">Enter the assignment name</label>
-        <input class="form-control" type="text" name="course_name" id="name_input" style = "width: 160px;" placeholder = "Assignment name">
+        <label for="name_input" style="font-size:larger;">Enter the type of assignment</label>
+        <input class="form-control" type="text" name="course_name" id="name_input" style = "width: 160px;" placeholder = "E.g. test">
 
-        <label for="grade_input" style="font-size: larger;">Enter the grade you got on the assignment</label>
+        <label for="grade_input" style="font-size: larger;">Enter how much of your total grade this type of assignment is worth</label>
         <input class="form-control" type="number" name="grade_input" id="grade_input" style = "width: 75px;">
 
-        <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
+        <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
             (in percent)</label>
-        <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" style = "width: 75px;">
+        <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" style = "width: 75px;"> -->
         <br>
         <input type="submit" value="Submit">
     </form>
