--- a/grades/templates/grades/indCourse.html
+++ b/grades/templates/grades/indCourse.html
@@ -3,29 +3,31 @@
 <script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
     integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
     crossorigin="anonymous"></script>
+    <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <div class="container">
     {% if user.is_authenticated %}
     <h1 style = "text-align: center;"> {{ indCourse.course_name }}</h1>
     {% if indCourse.improved is False %}
     <div>
-    <h2 style = "float: left;">Current grade:</h2><h2 style = "color: red; padding-left: 8em;"> {{ indCourse.course_grade }}%</h2>
+    <h2 style = "float: left;">Current grade:</h2><h2 style = "color: red; padding-left: 8em;"> {{ indCourse.course_grade }}%<i class = "fa fa-angle-down" style = "color: red; padding-left: 5px;"></i></h2>
     </div>
     {% endif %}
     {% if indCourse.improved is True %}
     <div>
-    <h2 style = "float: left;">Current grade:</h2><h2 style = "color: #39D043; padding-left: 8em;"> {{ indCourse.course_grade }}%</h2>
+    <h2 style = "float: left;">Current grade:</h2><h2 style = "color: #39D043; padding-left: 8em;"> {{ indCourse.course_grade }}%<i class = "fa fa-angle-up" style = "color: #39D043; padding-left: 5px;"></i></h2>
     </div>
     {% endif %}
     {% if indCourse %}
     {% for assType in indCourse.asstype_set.all %}
-    <p>Assignment Type: {{ assType.ass_type }} Worth: {{ assType.grade_percentage }}% <a href="{% url 'grades:RemoveType' course_id=indCourse.id asstype_id=assType.id%}">Remove
-        {{ assType.ass_name }} </a></p>  
+    <p>Assignment Type: {{ assType.ass_type }} Worth: {{ assType.grade_percentage }}% <a href="{% url 'grades:RemoveType' course_id=indCourse.id asstype_id=assType.id%}"><i class = "fa fa-trash"></i> </a></p>  
     <div class="container">
         <div class="row">
 
 
           <div class="col-sm" style = "width: 100;">
+            {% if assType.assignment_set.exists %}
             Assignment Name<br>
+            {% endif %}
             <ul>
                 {% for assignment in assType.assignment_set.all %}
                 <p>{{ assignment.ass_name }} </p>
@@ -35,33 +37,40 @@
           </div>
 
           <div class="col-sm" style = "width: 100;">
+            {% if assType.assignment_set.exists %}
             Assignment Grade<br>
+            {% endif %}
             <ul>
                 {% for assignment in assType.assignment_set.all %}
                 <p> {{ assignment.grade }}%
-                    <a href="{% url 'grades:RemoveAssignment' course_id=indCourse.id assignment_id=assignment.id%}">Remove
-                            assignment</a></p>
+                    <a href="{% url 'grades:RemoveAssignment' course_id=indCourse.id assignment_id=assignment.id%}"><i class = "fa fa-trash"></i></a></p>
                     {% endfor %}
                     <!-- <a href="/grades/assignments"> Add an assignment here </a> -->
             </ul>
           </div>
         </div>
       </div>
-      <h4>Enter New Assignment</h4>
+      <!-- <h4>Enter New Assignment</h4> -->
       
       <form action="{% url 'grades:NewAssignment' indCourse.id assType.id%}" method="post">
           {% csrf_token %}
-          <label for="name_input" style="font-size:larger;">Enter the assignment name</label>
+          <div style = "display: inline-block;">
+        <div style = "float: left;">
+          <label for="name_input" style="font-size:larger;">Enter New {{ assType.ass_type }} </label>
           <input class="form-control" type="text" name="course_name" id="name_input" style = "width: 160px;" placeholder = "Assignment name">
-  
-          <label for="grade_input" style="font-size: larger;">Enter the grade you got on the assignment</label>
-          <input class="form-control" type="number" name="grade_input" id="grade_input" style = "width: 75px;">
-  
+        </div>
+        <div style = "float: left; padding-left: 20px;">
+          <label for="grade_input" style="font-size: larger;">Enter Grade Achieved</label>
+          <input class="form-control" type="number" name="grade_input" id="grade_input" style = "width: 125px;" placeholder = "E.g. 100%">
+        </div>
+        <div style = "float: left; padding-left: 20px; padding-top: 40px;">
+            <input type="submit" value="Submit">
+          </div>
+        </div>
           <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
               (in percent)</label>
           <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" style = "width: 75px;"> -->
-          <br>
-          <input type="submit" value="Submit">
+          
       </form>
       {% endfor %}
     {% endif %}
@@ -72,8 +81,8 @@
         <label for="name_input" style="font-size:larger;">Enter the type of assignment</label>
         <input class="form-control" type="text" name="course_name" id="name_input" style = "width: 160px;" placeholder = "E.g. test">
 
-        <label for="grade_input" style="font-size: larger;">Enter how much of your total grade this type of assignment is worth</label>
-        <input class="form-control" type="number" name="grade_input" id="grade_input" style = "width: 75px;">
+        <label for="grade_input" style="font-size: larger;">How much percent does this assignment type weigh?</label>
+        <input class="form-control" type="number" name="grade_input" id="grade_input" style = "width: 125px;" placeholder = "E.g. 25%">
 
         <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
             (in percent)</label>
