--- a/grades/templates/grades/indCourse.html
+++ b/grades/templates/grades/indCourse.html
@@ -57,14 +57,23 @@
                     style="color: #39D043; padding-left: 5px;"></i></h2>
         </div>
         {% endif %}
-        
+
         {% if indCourse %}
         {% for assType in indCourse.asstype_set.all %}
-        <p>Assignment Type: {{ assType.ass_type }} Worth: {{ assType.grade_percentage }}% <a
-                href="{% url 'grades:RemoveType' course_id=indCourse.id asstype_id=assType.id%}"><i
-                    class="fa fa-trash"></i> </a></p>
         <div class="container">
-            <div class= "row">
+            <div class="row" style="display: flexbox; justify-content: space-between; font-size: 24px;">
+                <div style=" float: left; position: relative;">
+                    <p>Assignment Type: {{ assType.ass_type }} </p>
+                </div>
+                <div style="width: 200px; float: right; position:relative;">
+                    <p>Worth: {{ assType.grade_percentage }}%
+                        <a href="{% url 'grades:RemoveType' course_id=indCourse.id asstype_id=assType.id%}"><i
+                                class="fa fa-trash"></i> </a></p>
+                </div>
+            </div>
+        </div>
+        <div class="container">
+            <div class="row">
 
 
                 <div class="col-sm" style="width: 100;">
@@ -90,14 +99,13 @@
                                 href="{% url 'grades:RemoveAssignment' course_id=indCourse.id assignment_id=assignment.id%}"><i
                                     class="fa fa-trash"></i></a></p>
                         {% endfor %}
-                        <!-- <a href="/grades/assignments"> Add an assignment here </a> -->
                     </ul>
                 </div>
             </div>
         </div>
         <!-- <h4>Enter New Assignment</h4> -->
 
-        <form action="{% url 'grades:NewAssignment' indCourse.id assType.id%}" method="post">
+        <!-- <form action="{% url 'grades:NewAssignment' indCourse.id assType.id%}" method="post">
             {% csrf_token %}
             <div style="display: inline-block;">
                 <div style="float: left;">
@@ -113,33 +121,143 @@
                 <div style="float: left; padding-left: 20px; padding-top: 40px;">
                     <input type="submit" value="Submit">
                 </div>
-            </div>
-            <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
+            </div> -->
+        <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
               (in percent)</label>
           <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" style = "width: 75px;"> -->
 
         </form>
         {% endfor %}
         {% endif %}
-        <h4>Enter New Assignment Type</h4>
-
-        <form action="{% url 'grades:NewType' indCourse.id%}" method="post">
+        {% if indCourse.asstype_set.exists %}
+        <h4>Enter New Assignment</h4>
+        <form action="{% url 'grades:NewAssignment2' indCourse.id%}" method="post">
             {% csrf_token %}
-            <label for="name_input" style="font-size:larger;">Enter the type of assignment</label>
-            <input class="form-control" type="text" name="course_name" id="name_input" style="width: 160px;"
-                placeholder="E.g. test">
+            {{ form }}
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                        <div>
+                            <label for="ass_name" >Assignment Name</label>
+                            <input class="form-control" type="text" name="ass_name" id="assname" placeholder="Assignment name" required>
+                            <div class="invalid-feedback">
+                                Please enter a name.
+                            </div>
+                    </div>
+                </div>
 
-            <label for="grade_input" style="font-size: larger;">How much percent does this assignment type
-                weigh?</label>
-            <input class="form-control" type="number" name="grade_input" id="grade_input" style="width: 125px;"
-                placeholder="E.g. 25%">
+                <div class="col-md-4 mb-3">
+                        <label for="grade" >Enter Grade Achieved</label>
+                        <input class="form-control" type="number" name="grade" id="grade" placeholder="E.g. 100%" required>
+                </div>
 
-            <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
+                <div class="col-md-4 mb-3">
+                        <label for="ass_type" >Select Assignment Type</label>
+                        <select class="form-control" id="assignment_type_input" name="ass_type" required>
+                            <option value="" disabled selected>Assignment Type</option>
+                            {% for assType in indCourse.asstype_set.all %}
+                            <option value={{ assType.id }}>{{ assType.ass_type }}</option>
+                            {% endfor %}
+                        </select>
+                </div>
+                <button class="btn btn-primary btn-sm" type="submit">Submit form</button>
+            </div>
+        </form>
+        {% endif %}
+        <h4>Enter New Assignment Type</h4>
+        <div>
+            <form action="{% url 'grades:NewType' indCourse.id%}" method="post">
+                {% csrf_token %}
+                <label for="name_input" style="font-size:larger;">Enter the type of assignment</label>
+                <input class="form-control " type="text" name="course_name" id="name_input" style="width: 160px;"
+                    placeholder="E.g. test">
+
+                <label for="grade_input" style="font-size: larger;">How much percent does this assignment type
+                    weigh?</label>
+                <input class="form-control" type="number" name="grade_input" id="grade_input" style="width: 125px;"
+                    placeholder="E.g. 25%">
+
+                <!-- <label for="grade_percentage" style="font-size: larger;">How much of your total grade is this assignment worth?
             (in percent)</label>
         <input class="form-control" type="number" name="grade_percentage" id="grade_percentage" style = "width: 75px;"> -->
-            <br>
-            <input type="submit" value="Submit">
+                <br>
+                <input type="submit" value="Add Type" id="NewType" name="NewType">
+            </form>
+        </div>
+
+
+
+
+        <form class="needs-validation" novalidate>
+            <div class="form-row">
+                <div class="col-md-4 mb-3">
+                    <label for="validationCustom01">First name</label>
+                    <input type="text" class="form-control" id="validationCustom01" placeholder="First name"
+                        value="Mark" required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="validationCustom02">Last name</label>
+                    <input type="text" class="form-control" id="validationCustom02" placeholder="Last name" value="Otto"
+                        required>
+                    <div class="valid-feedback">
+                        Looks good!
+                    </div>
+                </div>
+                <div class="col-md-4 mb-3">
+                    <label for="validationCustomUsername">Username</label>
+                    <div class="input-group">
+                        <div class="input-group-prepend">
+                            <span class="input-group-text" id="inputGroupPrepend">@</span>
+                        </div>
+                        <input type="text" class="form-control" id="validationCustomUsername" placeholder="Username"
+                            aria-describedby="inputGroupPrepend" required>
+                        <div class="invalid-feedback">
+                            Please choose a username.
+                        </div>
+                    </div>
+                </div>
+            </div>
+            <div class="form-row">
+                <div class="col-md-6 mb-3">
+                    <label for="validationCustom03">City</label>
+                    <input type="text" class="form-control" id="validationCustom03" placeholder="City" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid city.
+                    </div>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <label for="validationCustom04">State</label>
+                    <input type="text" class="form-control" id="validationCustom04" placeholder="State" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid state.
+                    </div>
+                </div>
+                <div class="col-md-3 mb-3">
+                    <label for="validationCustom05">Zip</label>
+                    <input type="text" class="form-control" id="validationCustom05" placeholder="Zip" required>
+                    <div class="invalid-feedback">
+                        Please provide a valid zip.
+                    </div>
+                </div>
+            </div>
+            <div class="form-group">
+                <div class="form-check">
+                    <input class="form-check-input" type="checkbox" value="" id="invalidCheck" required>
+                    <label class="form-check-label" for="invalidCheck">
+                        Agree to terms and conditions
+                    </label>
+                    <div class="invalid-feedback">
+                        You must agree before submitting.
+                    </div>
+                </div>
+            </div>
+            <button class="btn btn-primary btn-sm" type="submit">Submit form</button>
         </form>
+
+
+
         {% else %}
         <h1>Please log in to see your Personal Dashboard</h1>
         <a href="{% url 'social:begin' 'google-oauth2' %}">
@@ -147,6 +265,7 @@
         </a>
         {% endif %}
     </div>
+
 </body>
 
 </html>
