--- a/grades/templates/grades/index.html
+++ b/grades/templates/grades/index.html
@@ -1,62 +1,87 @@
-<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css" integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
-<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js" integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl" crossorigin="anonymous"></script>
+<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/css/bootstrap.min.css"
+    integrity="sha384-Gn5384xqQ1aoWXA+058RXPxPg6fy4IWvTNh0E263XmFcJlSAwiGgFAW/dAiS6JXm" crossorigin="anonymous">
+<script src="https://maxcdn.bootstrapcdn.com/bootstrap/4.0.0/js/bootstrap.min.js"
+    integrity="sha384-JZR6Spejh4U02d8jOt6vLEHfe/JQGiRRSQQxSfFWpi1MquVdAyjUar5+76PVCmYl"
+    crossorigin="anonymous"></script>
 <script src="https://kit.fontawesome.com/a076d05399.js"></script>
 <!DOCTYPE html>
 <html>
-    <head>
-    </head>
-    <body>
-    <div class = "container">
-        {% if user.is_authenticated %}
-        <h4 class = "display-4" style = "text-align: center; font-size: 45px;">Welcome {{ user }}</h4>
-        <h4 class = "display-4" style = "text-align: left; font-size:30px; ">Here are your courses:</h4>
-        {% if course_list %}
-            <ul>
-            {% for course in course_list %}
-                {% if course.improved is True %}
-                <div style = "display: inline-block" >
-                    <p style = "float: left;"><a href="{% url 'grades:toIndCourse' course.id %}">{{ course.course_name }}</a></p> <p style = "float: left;color: #39D043; padding-left: 20em; padding-right: 20em;"> <strong>{{ course.course_grade }}</strong><i class = "fa fa-angle-up" style = "color: #39D043; padding-left: 5px;"></i></p>
-                    <a href="{% url 'grades:RemoveCourse' course_id=course.id %}"><i class = "fa fa-trash"></i></a> 
-                        <!-- <i class = "bi bi-chevron-right">test</i> -->
-                        <!-- <svg class="bi bi-chevron-right" width="32" height="32" viewBox="0 0 20 20" fill="currentColor" xmlns="http://www.w3.org/2000/svg"><path fill-rule="evenodd" d="M6.646 3.646a.5.5 0 01.708 0l6 6a.5.5 0 010 .708l-6 6a.5.5 0 01-.708-.708L12.293 10 6.646 4.354a.5.5 0 010-.708z" clip-rule="evenodd"/></svg> -->
 
+<head>
+</head>
+
+<body>
+    <div class="container">
+        {% if user.is_authenticated %}
+        <h4 class="display-4" style="text-align: center; font-size: 45px;">Welcome {{ user }}</h4>
+        <h4 class="display-4" style="text-align: left; font-size:30px; ">Here are your courses:</h4>
+        {% if course_list %}
+        <ul>
+            {% for course in course_list %}
+            {% if course.improved is True %}
+            <div class="row" style="text-align: center;">
+                <div class="col-sm">
+                    <a href="{% url 'grades:toIndCourse' course.id %}">{{ course.course_name }}</a>
                 </div>
-                {% endif %}
-                {% if course.improved is False %}
-                <div style = "display: inline-block">
-                <p style = "float: left;"><a href="{% url 'grades:toIndCourse' course.id %}">{{ course.course_name }}</a></p> <p style = "float: left;color: red; padding-left: 20em; padding-right: 20em;"> <strong>{{ course.course_grade }}</strong><i class = "fa fa-angle-down" style = "color: red; padding-left: 5px;"></i></p>
-                <a href="{% url 'grades:RemoveCourse' course_id=course.id %}"><i class = "fa fa-trash"></i></a>
+                <div class="col-sm" style="float: left;color: #39d043;">
+                    <strong>{{ course.course_grade }}</strong><i class="fa fa-angle-down"
+                        style="color: #39D043; padding-left: 5px;"></i>
                 </div>
-                {% endif %}
+                <div class="col-sm">
+                    <a href="{% url 'grades:RemoveCourse' course_id=course.id %}"><i class="fa fa-trash"></i></a>
+                </div>
+            </div>
+
+            {% endif %}
+            {% if course.improved is False %}
+            <div class="row" style="text-align: center;">
+                <div class="col-sm">
+                    <a href="{% url 'grades:toIndCourse' course.id %}">{{ course.course_name }}</a>
+                </div>
+                <div class="col-sm" style="float: left;color: red;">
+                    <strong>{{ course.course_grade }}</strong><i class="fa fa-angle-down"
+                        style="color: red; padding-left: 5px;"></i>
+                </div>
+                <div class="col-sm">
+                    <a href="{% url 'grades:RemoveCourse' course_id=course.id %}"><i class="fa fa-trash"></i></a>
+                </div>
+            </div>
+            {% endif %}
             {% endfor %}
+            <div style = "position: relative; bottom: -50">
             <form action="{% url 'grades:NewCourse' %}" method="post">
                 {% csrf_token %}
-                <label for="name_input" style = "font-size:x-large;">Create a New Course</label>
-                <input class = "form-control" type="text" name="course_name" id="name_input" placeholder="Course name" style = "width: 150px;">
-            <br>
-            <input type="submit" value="Submit">
+                <label for="name_input" style="font-size:x-large;">Create a New Course</label>
+                <input class="form-control" type="text" name="course_name" id="name_input" placeholder="Course name"
+                    style="width: 150px;">
+                <div style="padding-top: 10px;">
+                    <button class="btn btn-primary btn-sm" type="submit">Submit form</button>
+                </div>
             </form>
-            </ul>
+        </div>
+        </ul>
         {% else %}
         <ul>
             <p>You have no courses.</p>
             <form action="{% url 'grades:NewCourse' %}" method="post">
                 {% csrf_token %}
-                <label for="name_input" style = "font-size:x-large;">Create a New Course</label>
-                <input class = "form-control" type="text" name="course_name" id="name_input" placeholder="Course name" style = "width: 150px;">
-            <br>
-            <input type="submit" value="Submit">
+                <label for="name_input" style="font-size:x-large;">Create a New Course</label>
+                <input class="form-control" type="text" name="course_name" id="name_input" placeholder="Course name"
+                    style="width: 150px;">
+                <div style="padding-top: 10px;">
+                    <button class="btn btn-primary btn-sm" type="submit">Submit form</button>
+                </div>
             </form>
         </ul>
         {% endif %}
-    {% else %}
+        {% else %}
         <h1>Please log in to see your Personal Dashboard</h1>
         <a href="{% url 'social:begin' 'google-oauth2' %}">
-                Login
-                </a>
+            Login
+        </a>
         {% endif %}
 
     </div>
-    </body>
+</body>
 
 </html>
